Fix countdown event name scrollbar

--- a/assets/css/sportspress.css
+++ b/assets/css/sportspress.css
@@ -260,7 +260,7 @@
 
 /* Countdowns */
 .sp-template-countdown .event-name {
-	overflow: auto;
+	overflow: visible;
 }
 .sp-template-countdown .team-logo {
 	width: 20%;
